--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,6 @@ validation_schemas/phases_transpiled/
 validation_test_results/
 
 # Dependencies from other repos
+saxon-he.jar
+bin/
 transpile.xsl
