Install depencies directly in workflow instead of scripts + only unzip necessary files

--- a/.github/workflows/RuleValidation.yml
+++ b/.github/workflows/RuleValidation.yml
@@ -4,6 +4,11 @@ on:
   push:
     # TODO: run only on PR on main
 
+env:
+  SCHXSLT2_VERSION: 1.4.4
+  SAXON_HE_MAJOR: 12
+  SAXON_HE_MINOR: 8
+
 jobs:
   validate-rules:
     runs-on: ubuntu-latest
@@ -28,11 +33,16 @@ jobs:
       #       transpile.xsl
       #     key: deps-v1
 
-      - name: Setup Saxon-HE
-        run: ./setup_saxon_he.sh
+      - name: Saxon dependencies
+        run: |
+          curl -L -o SaxonHE${SAXON_HE_MAJOR}-${SAXON_HE_MINOR}J.zip https://github.com/Saxonica/Saxon-HE/releases/download/SaxonHE-${SAXON_HE_MAJOR}-${SAXON_HE_MINOR}/SaxonHE${SAXON_HE_MAJOR}-${SAXON_HE_MINOR}J.zip
+          unzip -p SaxonHE${SAXON_HE_MAJOR}-${SAXON_HE_MINOR}J.zip saxon-he-${SAXON_HE_MAJOR}.${SAXON_HE_MINOR}.jar >saxon-he.jar
+          unzip SaxonHE${SAXON_HE_MAJOR}-${SAXON_HE_MINOR}J.zip "lib/*"
 
-      - name: Setup SchXslt2
-        run: ./setup_schxslt2.sh
+      - name: SchXslt2 dependencies
+        run: |
+          curl -L -o schxslt2-${SCHXSLT2_VERSION}.zip https://codeberg.org/SchXslt/schxslt2/releases/download/v${SCHXSLT2_VERSION}/schxslt2-${SCHXSLT2_VERSION}.zip
+          unzip -p schxslt2-${SCHXSLT2_VERSION}.zip schxslt2-${SCHXSLT2_VERSION}/transpile.xsl >transpile.xsl
 
       - name: Transpile Schematron to XSL per phase (rule)
         run: ./transpile_phases.sh
