--- a/.github/workflows/RuleValidation.yml
+++ b/.github/workflows/RuleValidation.yml
@@ -1,8 +1,9 @@
 name: Rule Validation CI
 
 on:
-  pull_request:
-    branches: [ "main" ]
+  push:
+  # pull_request:
+  #   branches: [ "main" ]
 
 env:
   SCHXSLT2_VERSION: 1.4.4
@@ -23,26 +24,18 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      # - name: Cache dependencies
-      #   id: cache-deps
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: |
-      #       saxon-he.jar
-      #       lib/
-      #       transpile.xsl
-      #     key: deps-v1
-
       - name: Saxon dependencies
         run: |
           curl -L -o SaxonHE${SAXON_HE_MAJOR}-${SAXON_HE_MINOR}J.zip https://github.com/Saxonica/Saxon-HE/releases/download/SaxonHE-${SAXON_HE_MAJOR}-${SAXON_HE_MINOR}/SaxonHE${SAXON_HE_MAJOR}-${SAXON_HE_MINOR}J.zip
           unzip -p SaxonHE${SAXON_HE_MAJOR}-${SAXON_HE_MINOR}J.zip saxon-he-${SAXON_HE_MAJOR}.${SAXON_HE_MINOR}.jar >saxon-he.jar
           unzip SaxonHE${SAXON_HE_MAJOR}-${SAXON_HE_MINOR}J.zip "lib/*"
+          rm SaxonHE${SAXON_HE_MAJOR}-${SAXON_HE_MINOR}J.zip
 
       - name: SchXslt2 dependencies
         run: |
           curl -L -o schxslt2-${SCHXSLT2_VERSION}.zip https://codeberg.org/SchXslt/schxslt2/releases/download/v${SCHXSLT2_VERSION}/schxslt2-${SCHXSLT2_VERSION}.zip
           unzip -p schxslt2-${SCHXSLT2_VERSION}.zip schxslt2-${SCHXSLT2_VERSION}/transpile.xsl >transpile.xsl
+          rm schxslt2-${SCHXSLT2_VERSION}.zip
 
       - name: Transpile Schematron to XSL per phase (rule)
         run: scripts/transpile_phases.sh
@@ -58,4 +51,12 @@ jobs:
 
       - name: Validate whether failing tests fail and passing test pass
         run: scripts/validate_output.sh
-        
+
+      # - name: Transpile Schematron to XSL per scope
+      #   run: scripts/transpile_scopes.sh
+
+      - name: Upload validation results
+        uses: actions/upload-artifact@v4
+        with:
+          name: scopes-transpiled
+          path: validation_schemas/scopes_transpiled
