--- a/.github/workflows/RuleValidation.yml
+++ b/.github/workflows/RuleValidation.yml
@@ -49,11 +49,11 @@ jobs:
           name: validation-results
           path: validation_output
 
-      - name: Validate whether failing tests fail and passing test pass
-        run: scripts/validate_output.sh
+      # - name: Validate whether failing tests fail and passing test pass
+      #   run: scripts/validate_output.sh
 
-      # - name: Transpile Schematron to XSL per scope
-      #   run: scripts/transpile_scopes.sh
+      - name: Transpile Schematron to XSL per scope
+        run: scripts/transpile_scopes.sh
 
       - name: Upload validation results
         uses: actions/upload-artifact@v4
