--- a/.github/workflows/RuleValidation.yml
+++ b/.github/workflows/RuleValidation.yml
@@ -63,5 +63,6 @@ jobs:
       
       - name: Release scope XSLs
         uses: softprops/action-gh-release@v2
+        if: github.ref_type == 'tag'
         with: 
           files: validation_schemas/scopes_transpiled
