Removed release step from CI + fixed R.5

--- a/.github/workflows/RuleValidation.yml
+++ b/.github/workflows/RuleValidation.yml
@@ -49,8 +49,8 @@ jobs:
           name: validation-results
           path: validation_output
 
-      # - name: Validate whether failing tests fail and passing test pass
-      #   run: scripts/validate_output.sh
+      - name: Validate whether failing tests fail and passing test pass
+        run: scripts/validate_output.sh
 
       - name: Transpile Schematron to XSL per scope
         run: scripts/transpile_scopes.sh
@@ -61,8 +61,8 @@ jobs:
           name: scopes-transpiled
           path: validation_schemas/scopes_transpiled
       
-      - name: Release scope XSLs
-        uses: softprops/action-gh-release@v2
-        if: github.ref_type == 'tag'
-        with: 
-          files: validation_schemas/scopes_transpiled
+      # - name: Release scope XSLs
+      #   uses: softprops/action-gh-release@v2
+      #   if: github.ref_type == 'tag'
+      #   with: 
+      #     files: validation_schemas/scopes_transpiled
