--- a/.github/workflows/RuleValidation.yml
+++ b/.github/workflows/RuleValidation.yml
@@ -1,9 +1,8 @@
 name: Rule Validation CI
 
 on:
-  push:
-  # pull_request:
-  #   branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 env:
   SCHXSLT2_VERSION: 1.4.4
