Gedetailleerde informatie in output (#26)
* Added properties to asserts of all rules + general minor fixes and improvements

* Added scopes to schema generation, modified patterns to support them

* Added complete transpiling process

* Validate test output in CI (#29)

* Automated test setup

* Add Saxon-HE to pipeline, removed related files from repo + general cleanup

* Added annotions to CI run

* Uncommented generating output

* Workflow cleanup

* Install depencies directly in workflow instead of scripts + only unzip necessary files

* Added path to corresponding template file to annotations + notice about artifacts if failed

* Uncommented output validation

* Explicitly set line number to 1 for annotations

* Annotation test

* Test summary

* Add checkout step for test

* Remove annotations, use report with links instead

* Root cleanup into scripts and wrappers dirs

* Scopes arctifact test + fixed path issues in wrappers

* Test fix

* Release test

* Require tag for release

* Removed release step from CI + fixed R.5

* Only run rule validation pipeline on main PRs

---------

Co-authored-by: Sytse Walraven <sytse.walraven@Mac.keronic.com>
Co-authored-by: Sytse Walraven <sytse.walraven@Sytses-MacBook-Pro.local>

---------

Co-authored-by: Sytse Walraven <sytse.walraven@Sytses-MacBook-Pro.local>
Co-authored-by: Sytse Walraven <sytse.walraven@Mac.keronic.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
 .DS_Store
 .project
+
+# Generated data
 validation_data/
 validation_output/
+validation_schemas/base_included/
+validation_schemas/scopes/
+validation_schemas/scopes_transpiled/
+validation_schemas/phases_transpiled/
+validation_test_results/
+
+# Dependencies from other repos
+saxon-he.jar
+lib/
+transpile.xsl
+*.zip
