Annotation when HTML diff check fails

--- a/.github/workflows/DocValidation.yml
+++ b/.github/workflows/DocValidation.yml
@@ -24,11 +24,6 @@ jobs:
     - name: Install dependencies
       run: scripts/install_dependencies.sh
 
-    - name: Generate and compare HTML
-      run: java -jar saxon-he.jar -xsl:doc/NLCSValidatieRegels.xsl -s:doc/NLCSValidatieRegels.xml -o:doc/NLCSValidatieRegels.html
-    
-    - name: Generated HTML diff check
-      run: |
-        git status
-        exit $(git status --porcelain=v1 2>/dev/null | grep -c doc/NLCSValidatieRegels.html)
+    - name: Generate validatieregels HTML and check if its content matches the current HTML
+      run: scripts/generate_and_compare_htmls.sh
       
