--- a/.github/workflows/RuleCoverage.yml
+++ b/.github/workflows/RuleCoverage.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   covered-rules:
     runs-on: ubuntu-latest
+    continue-on-error: true
 
     steps:
       - name: Checkout repository
