--- a/.github/workflows/DocValidation.yml
+++ b/.github/workflows/DocValidation.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
   push:
     branches: [ "main" ]
+    paths: ["doc/**"]
 
 jobs:
   build:
@@ -16,5 +17,13 @@ jobs:
       with:
         java-version: '21'
         distribution: 'temurin'
+
     - name: Run tests
       run: java test/XMLValidation.java doc/NLCSValidatieRegels.xsd doc/NLCSValidatieRegels.xml
+
+    - name: Install dependencies
+      run: scripts/install_dependencies.sh
+
+    - name: Generate validatieregels HTML and check if its content matches the current HTML
+      run: scripts/generate_and_compare_htmls.sh
+      
