--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,3 +7,4 @@ repos:
   - id: trailing-whitespace
   - id: check-added-large-files
   - id: end-of-file-fixer
+    exclude: 'doc/NLCSValidatieRegels.html'
