--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ validation_schemas/base_included/
 validation_schemas/scopes/
 validation_schemas/scopes_transpiled/
 validation_schemas/phases_transpiled/
+validation_schemas/abstract_patterns_scope_checks/
+validation_schemas/base_scope_checks/
 validation_test_results/
 
 # Dependencies from other repos
