--- a/.github/workflows/Deliverables.yml
+++ b/.github/workflows/Deliverables.yml
@@ -34,11 +34,11 @@ jobs:
       - name: Upload deliverables
         uses: actions/upload-artifact@v4
         with:
-          name: nlcspp-inhoudelijke-validaties
-          path: nlcspp_inhoudelijke_validaties
+          name: dist
+          path: dist
 
-      # - name: Release deliverables
-      #   uses: softprops/action-gh-release@v2
-      #   if: github.ref_type == 'tag'
-      #   with:
-      #     files: nlcspp_inhoudelijke_validaties
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: github.ref_type == 'tag'
+        with:
+          files: dist/*
