--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .project
 
 # Generated data
+dist/
 validation_data/
 validation_output/
 validation_schemas/base_included/
@@ -11,7 +12,6 @@ validation_schemas/phases_transpiled/
 validation_schemas/abstract_patterns_scope_checks/
 validation_schemas/base_scope_checks/
 validation_test_results/
-nlcspp_inhoudelijke_validaties
 
 # Dependencies from other repos
 saxon-he.jar
