Added write permissions for release

--- a/.github/workflows/Deliverables.yml
+++ b/.github/workflows/Deliverables.yml
@@ -5,8 +5,11 @@ on:
     tags:
       - "v*"
 
+permissions:
+  contents: write
+
 jobs:
-  validate-rules:
+  upload-deliverables:
     runs-on: ubuntu-latest
 
     steps:
