General cleanup (workflow names in line with wiki, added missing handles in test data, added unset check to connected points check)

--- a/.github/workflows/Deliverables.yml
+++ b/.github/workflows/Deliverables.yml
@@ -1,4 +1,4 @@
-name: Deliverables CI
+name: Deliverables
 
 on:
   push:
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: scripts/install_dependencies.sh
 
-      - name: Add scope checks to patterns
+      - name: Add scope checks
         run: scripts/add_scope_checks.sh
 
       - name: Transpile Schematron to XSL
