--- a/.github/workflows/RuleValidation.yml
+++ b/.github/workflows/RuleValidation.yml
@@ -22,17 +22,17 @@ jobs:
       - name: Install dependencies
         run: scripts/install_dependencies.sh
 
-      - name: Transpile Schematron to XSL per phase (rule)
+      - name: Transpile phases to XSL
         run: scripts/transpile_phases.sh
 
-      - name: Perform validation of template XMLs against phase XSL
+      - name: Validate templates
         run: scripts/validate_templates.sh
 
-      - name: Upload validation results
+      - name: Upload validation reports
         uses: actions/upload-artifact@v4
         with:
-          name: rule-validation-results
+          name: rule-validation-reports
           path: validation_output
 
-      - name: Validate whether failing tests fail and passing test pass
+      - name: Validate test reports
         run: scripts/validate_output.sh
